Fix flip clock demo on small screens

--- a/src/css/flip.css
+++ b/src/css/flip.css
@@ -93,16 +93,9 @@
 	font-weight: 900;
 }
 
-@media screen and (max-width: 32rem) {
-	/* Remove titles if screen becomes too small */
-	.flip-controls h4 {
-		display: none;
-	}
-}
-
 @media screen and (max-width: 28rem) {
 	/* Remove "family" column if screen becomes too small */
-	.flip-controls-family {
+	.flip-controls .flip-controls-family {
 		display: none;
 	}
 }
